kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: adminers.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: adminer
                port:
                  number: 8080

    - host: uas-app.k8s.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uas-ui
                port:
                  number: 3001
